feat: Implement production-ready Spring Boot backend enhancements
This commit introduces comprehensive improvements to the Spring Boot backend,
transforming it into a production-ready application with modern best practices.

## Authentication & Security
- Implemented JWT authentication with JJWT 0.12.6
- Added refresh token rotation for enhanced security
- Created JwtUtil for token generation and validation
- Implemented JwtAuthenticationFilter for request authentication
- Added CustomUserDetailsService for Spring Security integration
- Enhanced SecurityConfig with stateless sessions and CORS
- Added AuthService with login, register, refresh, and logout
- Updated AuthenticateController with new JWT endpoints

## Entity Enhancements
- Added Lombok annotations to all entities (@Data, @Builder, etc.)
- Implemented soft delete pattern with deletedAt field
- Added JPA Auditing with @CreatedDate, @LastModifiedDate
- Added audit tracking with @CreatedBy, @LastModifiedBy
- Enhanced AppUser to implement UserDetails for Spring Security
- Added utility methods (softDelete(), isDeleted(), etc.)
- Updated RefreshToken entity for token management

## DTO Layer
- Created organized request/response DTO structure
- Added Jakarta Validation to all request DTOs
- Implemented LoginRequest, RegisterRequest, RefreshTokenRequest
- Created CRUD DTOs for User, Ticket, Department, Announce
- Added AuthResponse with comprehensive token information
- Implemented ApiResponse wrapper for consistent API responses
- Created PageResponse for paginated endpoints

## Controllers & Services
- Updated AuthenticateController with @Valid validation
- Enhanced AppUserController with role-based security
- Created UserService with full CRUD operations
- Added soft delete and restore functionality
- Implemented @PreAuthorize for method-level security
- Added comprehensive logging throughout

## Global Improvements
- Enhanced GlobalExceptionHandler with JWT exception handling
- Added validation exception hand